--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forecast app</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="forecast">
@@ -39,6 +39,14 @@
             <div class="forecast-temperature" id="temperature">12</div>
             <div class="forecast-unit">°C</div>
           </div>
+        </div>
+        <div class="weather-forecast">
+            <div class="weather-forecast-day"> 
+                <div class="weather-forecast-date">Tue</div>
+                <div class="weather-forecast-icon">⛅</div>
+                <div class="weather-forecast-temperatures">
+                    <div class="weather-forecast-temperature"> <strong>15°C</strong> 9°C </div>
+                </div>
         </div>
       </main>
 
