added forecast days

--- a/index.html
+++ b/index.html
@@ -40,13 +40,68 @@
             <div class="forecast-unit">°C</div>
           </div>
         </div>
+
+        <!-- Forecast days -->
         <div class="weather-forecast">
-            <div class="weather-forecast-day"> 
-                <div class="weather-forecast-date">Tue</div>
-                <div class="weather-forecast-icon">⛅</div>
-                <div class="weather-forecast-temperatures">
-                    <div class="weather-forecast-temperature"> <strong>15°C</strong> 9°C </div>
-                </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15°C</strong> 9°C
+              </div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Wed</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>18°C</strong> 11°C
+              </div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Thu</div>
+            <div class="weather-forecast-icon">🌧</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>13°C</strong> 8°C
+              </div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>16°C</strong> 10°C
+              </div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">🌤</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>20°C</strong> 12°C
+              </div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sun</div>
+            <div class="weather-forecast-icon">☁️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>14°C</strong> 9°C
+              </div>
+            </div>
+          </div>
         </div>
       </main>
 
