--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
           </div>
         </div>
 
-        <!-- Forecast days -->
         <div class="weather-forecast">
           <div class="weather-forecast-day">
             <div class="weather-forecast-date">Tue</div>
@@ -122,6 +121,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
